test/classes/initializers/compilerGenerated/shadow_with_different_type.good
shadow_with_different_type.chpl:7: error: field 's' has same name as parent class field
shadow_with_different_type.chpl:3: note: parent class field declared here
